--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pepe.simongame">
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -43,4 +42,8 @@
             android:resource="@array/preloaded_fonts" />
     </application>
 
+    <uses-permission android:name = "android.permission.BLUETOOTH" />
+    <uses-permission android:name = "android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name = "android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name = "android.permission.BLUETOOTH" />
 </manifest>
